<resources>
    <string name="app_name">CalculadoraPrueba1</string>
    <string name="_00">00</string>
    <string name="calcular">Calcular</string>
    <string name="segundo_valor">segundo Valor</string>
    <string name="primer_valor">Primer Valor</string>
    <string name="operaciones_matematicas">Operaciones Matematicas</string>
    <string-array name="operacionesBasicas">
        <item>Suma</item>
        <item>Resta</item>
        <item>Multiplicacion</item>
        <item>Division</item>
        <item>Factorial</item>
        <item>Porcentaje</item>
        <item>Exponenciación</item>
        <item>Raiz</item>
        <item>Modulo</item>
        <item>Mayor que</item>
    </string-array>
</resources>