<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operaciones_matematicas"
        android:textSize="31sp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/primer_valor"
        android:textSize="23sp"
        android:autofillHints="si" />
    <EditText
        android:id="@+id/num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/segundo_valor"
        android:textSize="22sp"
        android:importantForAutofill="no" />
    <Spinner
        android:id="@+id/OperacionesBasicas"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="120dp"
        android:layout_width="wrap_content"
        android:entries="@array/operacionesBasicas"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp" />
    <Button
        android:id="@+id/Calcular"
        android:text="@string/calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/btnCalcular"
    android:layout_marginTop="22dp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/_00"
    android:layout_height="wrap_content"
         />


</LinearLayout>